[gd_scene load_steps=14 format=1]

[ext_resource path="res://scripts/game/riddleOverlay.gd" type="Script" id=1]
[ext_resource path="res://assets/game/overlayBackground.png" type="Texture" id=2]
[ext_resource path="res://themes/text24.tres" type="Theme" id=3]
[ext_resource path="res://themes/text30.tres" type="Theme" id=4]
[ext_resource path="res://assets/gui/inv_misc_bag_08.jpg" type="Texture" id=5]
[ext_resource path="res://assets/gui/inv_misc_bag_08_u.jpg" type="Texture" id=6]
[ext_resource path="res://assets/gui/inv_misc_bag_08_d.jpg" type="Texture" id=7]
[ext_resource path="res://assets/gui/inv_misc_book_08.jpg" type="Texture" id=8]
[ext_resource path="res://assets/gui/inv_misc_book_08_u.jpg" type="Texture" id=9]
[ext_resource path="res://assets/gui/inv_misc_book_08_d.jpg" type="Texture" id=10]
[ext_resource path="res://scenes/game/mini_inventory.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/game/mini_encyclopedia.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=1]

resource/name = "displayText"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("text:visible_characters")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0, 256 ]
}

[node name="riddleOverlay" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="background" type="TextureFrame" parent="."]

visibility/opacity = 0.3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 110.0
texture = ExtResource( 2 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="cheatButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 19.0
margin/top = 117.0
margin/right = 103.0
margin/bottom = 148.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Tricher"
flat = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 20.0
margin/top = 28.0
margin/right = 104.0
margin/bottom = 92.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="returnButton" type="Button" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 84.0
margin/bottom = 31.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Retour"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="tipButton" type="Button" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 1
margin/left = 0.0
margin/top = 35.0
margin/right = 84.0
margin/bottom = 66.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Indice"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="text" type="RichTextLabel" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = 121.0
margin/top = 20.0
margin/right = 159.0
margin/bottom = 100.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="inventoryButton" type="TextureButton" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 134.0
margin/top = 27.0
margin/right = 78.0
margin/bottom = 83.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
textures/hover = ExtResource( 6 )
textures/disabled = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="encyclopediaButton" type="TextureButton" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 72.0
margin/top = 27.0
margin/right = 16.0
margin/bottom = 83.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/pressed = ExtResource( 9 )
textures/hover = ExtResource( 9 )
textures/disabled = ExtResource( 10 )
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="mini_inventory" parent="." instance=ExtResource( 11 )]

visibility/visible = false

[node name="mini_encyclopedia" parent="." instance=ExtResource( 12 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/displayText = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="pressed" from="cheatButton" to="." method="_on_cheatButton_pressed"]

[connection signal="pressed" from="VBoxContainer/returnButton" to="." method="_on_returnButton_pressed"]

[connection signal="pressed" from="VBoxContainer/tipButton" to="." method="_on_tipButton_pressed"]

[connection signal="pressed" from="inventoryButton" to="." method="_on_inventoryButton_pressed"]

[connection signal="pressed" from="encyclopediaButton" to="." method="_on_encyclopediaButton_pressed"]


